p2/playbooks/manifests/ingress-default.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: app3-default
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      priority: 1
      services:
        - name: app3
          port: 80
