p2/playbooks/manifests/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  namespace: default
  annotations:
    # Traefik = default ingress controller in K3s
    kubernetes.io/ingress.class: "traefik"
spec:
  # defaultBackend:
  #     service:
  #       name: app3
  #       port:
  #         number: 80
  rules:
    - host: app1.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1
                port:
                  number: 80
    - host: app2.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app2
                port:
                  number: 80
